--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:4000/api // Example: VITE_API_BASE_URL=https://api.example.com/api
+// Example: VITE_API_BASE_URL=https://api.example.com/api
+VITE_API_BASE_URL=https://drug-info-app.onrender.com/api
