--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@mui/x-data-grid-pro": "^8.20.0",
+    "axios": "^1.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
