--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-PORT= ENTER_YOUR_BACKEND_PORT_HERE
+PORT= 4000 // Enter the port number the backend server will run on
 MONGODB_URI=ENTER_YOUR_MONGODB_CONNECTION_STRING_HERE
