provided a test mongo connection string

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 PORT= 4000 // Enter the port number the backend server will run on
-MONGODB_URI=ENTER_YOUR_MONGODB_CONNECTION_STRING_HERE
+# MONGODB_URI=ENTER_YOUR_MONGODB_CONNECTION_STRING_HERE
+
+# providing a default connection string for testing purposes
+MONGODB_URI=mongodb+srv://monsoon:Monsoon123@cluster0.lo7ga8t.mongodb.net/?appName=Cluster0
